fix price banner

--- a/index.html
+++ b/index.html
@@ -46,7 +46,14 @@
             <a href="#" class="banner__btn">ЗАКАЗАТЬ &nbsp<span>KYLIE LIP KIT</span></a>
           </div>
         </div>
-        <img src="img/product.png" alt="product images" class="banner__product">
+        <div class="banner__product">
+          
+          <img src="img/product.png" alt="product images" class="">
+          <div class="banner__price">
+            <span>219</span>
+            <span>Грн</span>
+          </div>
+        </div>
         <img class="banner__img" src="img/Untitled-1.png" alt="images">
       </div>
     </div>
